test/let2_3.slq

def main(){
	k:=let x:=3 in x;
	assert(k=3);
	return x; /// error
}
